<resources>
    <string name="app_name">NUMAD21Sp-WeihanLiu</string>
    <string name="action_settings">Bazinga!</string>

    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="back">Back</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello World!</string>
    <string name="author">Author: Weihan Liu \nEmail: liu.weih@northeastern.edu</string>

    <!-- Strings used for clicky table-->
    <string name="clickyA">A</string>
    <string name="clickyB">B</string>
    <string name="clickyC">C</string>
    <string name="clickyD">D</string>
    <string name="clickyE">E</string>
    <string name="clickyF">F</string>
    <string name="clickyPressed">Pressed: %1$s</string>
    <string name="clickyMainButtonText">Clicky</string>

    <!-- Strings used for link collector-->
    <string name="linkCollectorMain">Link Collector</string>
    <string name="addLinkDescription">Click to add a link</string>
    <string name="link_item_name">Link Name</string>
    <string name="link_item_url">URL</string>
    <string name="add_link_prompt_title">Add a link…</string>
    <string name="add">Add</string>
    <string name="empty_string_warning">Name or URL cannot be empty</string>
    <string name="add_success_msg">Link successfully added to list.</string>
    <string name="invalid_url_warning">Invalid URL</string>
    <string name="item_deleted">Item deleted.</string>

    <!-- Strings used for Locator-->
    <string name="locator_main_button">Locator</string>
    <string name="location_display">Latitude:%1$f \nLongitude:%2$f</string>
    <string name="gps_not_enabled">GPS not enabled.</string>
    <string name="location_permission_required">Location and GPS permission required</string>


    <!-- Strings used for Web Service-->
    <string name="service_button">At Your Service</string>
    Wait for it…<string name="joke_default">Wait for it…</string>
    <string name="get_joke_button">Give me a joke</string>
    <string name="show">Tap To Show</string>
    <string name="no_response_warning">Something went wrong! \nCheck your internet connection.</string>


</resources>