<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/logoBlue"
        android:backgroundTint="@color/logoBlue"
        android:paddingStart="8dp"
        android:paddingEnd="4dp"
        android:text="@string/add_link_prompt_title"
        android:textColor="@color/logoPink"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/link_prompt_name"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/link_item_name"
        android:importantForAutofill="no"
        android:inputType="textShortMessage" />

    <EditText
        android:id="@+id/link_prompt_url"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/link_item_url"
        android:importantForAutofill="no"
        android:inputType="textUri" />
</LinearLayout>