<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/clicky_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <TextView
        android:id="@+id/clickyShowPressedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/clicky_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clickyTable"
        app:layout_constraintVertical_bias="0.110000014" />

    <TableLayout
        android:id="@+id/clickyTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32">

        <TableRow
            android:id="@+id/clickyTableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clickyButtonA"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:backgroundTint="@color/logoBlue"
                android:onClick="onClick"
                android:text="@string/clickyA"
                android:textColor="@color/logoPink"
                android:textColorHighlight="@color/logoYellow"
                app:iconPadding="8dp" />

            <Button
                android:id="@+id/clickyButtonB"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:backgroundTint="@color/logoBlue"
                android:onClick="onClick"
                android:text="@string/clickyB"
                android:textColor="@color/logoPink"
                android:textColorHighlight="@color/logoYellow" />

            <Button
                android:id="@+id/clickyButtonC"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:backgroundTint="@color/logoBlue"
                android:onClick="onClick"
                android:text="@string/clickyC"
                android:textColor="@color/logoPink"
                android:textColorHighlight="@color/logoYellow" />

        </TableRow>

        <TableRow
            android:id="@+id/clickyTableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clickyButtonD"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:backgroundTint="@color/logoBlue"
                android:onClick="onClick"
                android:text="@string/clickyD"
                android:textColor="@color/logoPink"
                android:textColorHighlight="@color/logoYellow" />

            <Button
                android:id="@+id/clickyButtonE"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:backgroundTint="@color/logoBlue"
                android:onClick="onClick"
                android:text="@string/clickyE"
                android:textColor="@color/logoPink"
                android:textColorHighlight="@color/logoYellow" />

            <Button
                android:id="@+id/clickyButtonF"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:backgroundTint="@color/logoBlue"
                android:onClick="onClick"
                android:text="@string/clickyF"
                android:textColor="@color/logoPink"
                android:textColorHighlight="@color/logoYellow" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>